syntax = "proto3";

import "google/protobuf/any.proto";

option optimize_for = SPEED;

package oysterpack_trust_grpc.protos.foo;

service Foo {
    rpc unary(Request) returns (Response) {}

    rpc client_streaming(stream Request) returns (Response) {}

    rpc server_streaming(Request) returns (stream Response) {}

    rpc bidi_streaming(stream Request) returns (stream Response) {}
}

message Request {
    enum Futures {
        ONE = 0;
        THREE = 1;
    }

    ULID ulid = 1;
    Futures futures_version = 2;
}

message Response {
    ULID ulid = 1;
}

message ULID {
    uint64 ulid_1 = 1;
    uint64 ulid_2 = 2;
}
